Change python version

--- a/html/index.html
+++ b/html/index.html
@@ -108,7 +108,7 @@
   <div class="container">
     <div class="ll"><a href="../cppreference/reference/en/index.html">C/C++ Reference</a></div>
     <div class="ll"><a href="manual.html">Contestant Machine Manual</a></div>
-    <div class="ll"><a href="../python3.10/html/index.html">Python documentation</a></div>
+    <div class="ll"><a href="../python3.12-doc/html/index.html">Python documentation</a></div>
   </div>
 </body>
 
